@@ -55,7 +55,6 @@ import megamek.common.Mounted;
 import megamek.common.SmallCraft;
 import megamek.common.Tank;
 import megamek.common.TechConstants;
-import megamek.common.logging.LogLevel;
 import megamek.common.options.IOption;
 import megamek.common.options.PilotOptions;
 import megamek.common.weapons.bayweapons.BayWeapon;
@@ -135,15 +134,12 @@ public class CampaignXmlParser {
      * @throws NullEntityException Thrown when an entity is referenced but cannot be loaded or found
      */
     public Campaign parse() throws CampaignXmlParseException, NullEntityException {
-        final String METHOD_NAME = "parse()"; //$NON-NLS-1$
-
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Starting load of campaign file from XML..."); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Starting load of campaign file from XML...");
         // Initialize variables.
         Campaign retVal = new Campaign();
         retVal.setApp(app);
 
-        Document xmlDoc = null;
+        Document xmlDoc;
 
         try {
             // Using factory get an instance of document builder
@@ -152,7 +148,7 @@ public class CampaignXmlParser {
             // Parse using builder to get DOM representation of the XML file
             xmlDoc = db.parse(is);
         } catch (Exception ex) {
-            MekHQ.getLogger().error(CampaignXmlParser.class, METHOD_NAME, ex);
+            MekHQ.getLogger().error(CampaignXmlParser.class, ex);
 
             throw new CampaignXmlParseException(ex);
         }
@@ -171,7 +167,7 @@ public class CampaignXmlParser {
         for (int x = 0; x < nl.getLength(); x++) {
             Node wn = nl.item(x);
 
-            if (wn.getParentNode() != campaignEle) {
+            if (!wn.getParentNode().equals(campaignEle)) {
                 continue;
             }
 
@@ -206,7 +202,7 @@ public class CampaignXmlParser {
         for (int x = 0; x < nl.getLength(); x++) {
             Node wn = nl.item(x);
 
-            if (wn.getParentNode() != campaignEle) {
+            if (!wn.getParentNode().equals(campaignEle)) {
                 continue;
             }
 
@@ -241,7 +237,7 @@ public class CampaignXmlParser {
         for (int x = 0; x < nl.getLength(); x++) {
             Node wn = nl.item(x);
 
-            if (wn.getParentNode() != campaignEle) {
+            if (!wn.getParentNode().equals(campaignEle)) {
                 continue;
             }
 
@@ -255,11 +251,9 @@ public class CampaignXmlParser {
                 String xn = wn.getNodeName();
 
                 if (xn.equalsIgnoreCase("campaignOptions")) {
-                    retVal.setCampaignOptions(CampaignOptions
-                            .generateCampaignOptionsFromXml(wn));
+                    retVal.setCampaignOptions(CampaignOptions.generateCampaignOptionsFromXml(wn, version));
                 } else if (xn.equalsIgnoreCase("randomSkillPreferences")) {
-                    retVal.setRandomSkillPreferences(RandomSkillPreferences
-                            .generateRandomSkillPreferencesFromXml(wn));
+                    retVal.setRandomSkillPreferences(RandomSkillPreferences.generateRandomSkillPreferencesFromXml(wn));
                 } /* We don't need this since info is processed above in the first iteration...
                 else if (xn.equalsIgnoreCase("info")) {
                     processInfoNode(retVal, wn, version);
@@ -281,8 +275,7 @@ public class CampaignXmlParser {
                 } else if (xn.equalsIgnoreCase("finances")) {
                     processFinances(retVal, wn);
                 } else if (xn.equalsIgnoreCase("location")) {
-                    retVal.setLocation(CurrentLocation.generateInstanceFromXML(
-                            wn, retVal));
+                    retVal.setLocation(CurrentLocation.generateInstanceFromXML(wn, retVal));
                 } else if (xn.equalsIgnoreCase("skillTypes")) {
                     processSkillTypeNodes(retVal, wn, version);
                 } else if (xn.equalsIgnoreCase("specialAbilities")) {
@@ -292,19 +285,15 @@ public class CampaignXmlParser {
                 } else if (xn.equalsIgnoreCase("kills")) {
                     processKillNodes(retVal, wn, version);
                 } else if (xn.equalsIgnoreCase("shoppingList")) {
-                    retVal.setShoppingList(ShoppingList.generateInstanceFromXML(
-                            wn, retVal, version));
+                    retVal.setShoppingList(ShoppingList.generateInstanceFromXML(wn, retVal, version));
                 } else if (xn.equalsIgnoreCase("personnelMarket")) {
-                    retVal.setPersonnelMarket(PersonnelMarket.generateInstanceFromXML(
-                            wn, retVal, version));
+                    retVal.setPersonnelMarket(PersonnelMarket.generateInstanceFromXML(wn, retVal, version));
                     foundPersonnelMarket = true;
                 } else if (xn.equalsIgnoreCase("contractMarket")) {
-                    retVal.setContractMarket(ContractMarket.generateInstanceFromXML(
-                            wn, retVal, version));
+                    retVal.setContractMarket(ContractMarket.generateInstanceFromXML(wn, retVal, version));
                     foundContractMarket = true;
                 } else if (xn.equalsIgnoreCase("unitMarket")) {
-                    retVal.setUnitMarket(UnitMarket.generateInstanceFromXML(
-                            wn, retVal, version));
+                    retVal.setUnitMarket(UnitMarket.generateInstanceFromXML(wn, retVal, version));
                     foundUnitMarket = true;
                 } else if (xn.equalsIgnoreCase("lances")) {
                     processLanceNodes(retVal, wn);
@@ -340,21 +329,8 @@ public class CampaignXmlParser {
                     RankTranslator.translateRankSystem(retVal.getRanks().getOldRankSystem(), retVal.getFactionCode()));
         }
 
-        // if the version is earlier than 0.1.14, then we need to replace all
-        // the old integer
-        // ids of units and personnel with their UUIDs where they are
-        // referenced.
-        if (version.getMajorVersion() == 0 && version.getMinorVersion() < 2
-                && version.getSnapshot() < 14) {
-            fixIdReferences(retVal);
-        }
-        // if the version is earlier than 0.1.16, then we need to run another
-        // fix to update
-        // the externalIds to match the Unit IDs.
-        if (version.getMajorVersion() == 0 && version.getMinorVersion() < 2
-                && version.getSnapshot() < 16) {
-            fixIdReferencesB(retVal);
-        }
+        // Fixup any ghost kills
+        cleanupGhostKills(retVal);
 
         // adjust tech levels for version before 0.1.21
         if (version.getMajorVersion() == 0 && version.getMinorVersion() < 2
@@ -372,7 +348,7 @@ public class CampaignXmlParser {
                     && (null == f.getParentForce() || !f.getParentForce().isDeployed())) {
                 s.addForces(f.getId());
             }
-            // some units may need force id set for backwards compatability
+            // some units may need force id set for backwards compatibility
             // some may also need scenario id set
             for (UUID uid : f.getUnits()) {
                 Unit u = retVal.getUnit(uid);
@@ -385,16 +361,16 @@ public class CampaignXmlParser {
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] Force IDs set in %dms", System.currentTimeMillis() - timestamp)); //$NON-NLS-1$
+        MekHQ.getLogger().info(String.format("[Campaign Load] Force IDs set in %dms",
+            System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
         // Process parts...
-        List<Part> spareParts = new ArrayList<>();
         List<Part> removeParts = new ArrayList<>();
         for (Part prt : retVal.getParts()) {
-            Unit u = retVal.getUnit(prt.getUnitId());
-            prt.setUnit(u);
+            prt.fixReferences(retVal);
+
+            Unit u = prt.getUnit();
             if (null != u) {
                 // get rid of any equipmentparts without locations or mounteds
                 if (prt instanceof EquipmentPart) {
@@ -405,9 +381,9 @@ public class CampaignXmlParser {
                         continue;
                     }
                     // Remove existing duplicate parts.
-                    Part duplicatePart = u.getPartForEquipmentNum(((EquipmentPart) prt).getEquipmentNum(), ((EquipmentPart) prt).getLocation());
-                    if (duplicatePart instanceof EquipmentPart
-                        && ((EquipmentPart)prt).getType() == ((EquipmentPart)duplicatePart).getType()) {
+                    Part duplicatePart = u.getPartForEquipmentNum(((EquipmentPart) prt).getEquipmentNum(), prt.getLocation());
+                    if ((duplicatePart instanceof EquipmentPart)
+                            && ((EquipmentPart) prt).getType().equals(((EquipmentPart) duplicatePart).getType())) {
                         removeParts.add(prt);
                         continue;
                     }
@@ -436,13 +412,12 @@ public class CampaignXmlParser {
                 // if actuators on units have no location (on version 1.23 and
                 // earlier) then remove them and let initializeParts (called
                 // later) create new ones
-                if (prt instanceof MekActuator
-                        && ((MekActuator) prt).getLocation() == Entity.LOC_NONE) {
+                if ((prt instanceof MekActuator) && (prt.getLocation() == Entity.LOC_NONE)) {
                     removeParts.add(prt);
-                } else if (prt instanceof MissingMekActuator
-                        && ((MissingMekActuator) prt).getLocation() == Entity.LOC_NONE) {
+                } else if ((prt instanceof MissingMekActuator) && (prt.getLocation() == Entity.LOC_NONE)) {
                     removeParts.add(prt);
-                } else if ((u.getEntity() instanceof SmallCraft || u.getEntity() instanceof Jumpship) && (prt instanceof EnginePart || prt instanceof MissingEnginePart)) {
+                } else if (((u.getEntity() instanceof SmallCraft) || (u.getEntity() instanceof Jumpship))
+                        && ((prt instanceof EnginePart) || (prt instanceof MissingEnginePart))) {
                     //units from earlier versions might have the wrong kind of engine
                     removeParts.add(prt);
                 } else {
@@ -452,20 +427,6 @@ public class CampaignXmlParser {
                     }
                 }
 
-            } else if (version.getMajorVersion() == 0
-                    && version.getMinorVersion() < 2 && version.getSnapshot() < 16) {
-                boolean found = false;
-                for (Part spare : spareParts) {
-                    if (spare.isSamePartTypeAndStatus(prt)) {
-                        spare.incrementQuantity();
-                        removeParts.add(prt);
-                        found = true;
-                        break;
-                    }
-                }
-                if (!found) {
-                    spareParts.add(prt);
-                }
             }
             if (prt instanceof MissingPart) {
                 // Missing Parts should only exist on units, but there have
@@ -505,28 +466,26 @@ public class CampaignXmlParser {
                     && ((version.getMinorVersion() < 44)
                             || ((version.getMinorVersion() == 43) && (version.getSnapshot() < 7)))) {
                 if ((prt instanceof MekLocation)
-                        && (((MekLocation)prt).getStructureType() == EquipmentType.T_STRUCTURE_ENDO_STEEL)) {
+                        && (((MekLocation) prt).getStructureType() == EquipmentType.T_STRUCTURE_ENDO_STEEL)) {
                     if (null != u) {
-                        ((MekLocation)prt).setClan(TechConstants.isClan(u.getEntity().getStructureTechLevel()));
+                        ((MekLocation) prt).setClan(TechConstants.isClan(u.getEntity().getStructureTechLevel()));
                     } else {
-                        ((MekLocation)prt).setClan(retVal.getFaction().isClan());
+                        ((MekLocation) prt).setClan(retVal.getFaction().isClan());
                     }
                 } else if ((prt instanceof MissingMekLocation)
-                        && (((MissingMekLocation)prt).getStructureType() == EquipmentType.T_STRUCTURE_ENDO_STEEL)) {
+                        && (((MissingMekLocation) prt).getStructureType() == EquipmentType.T_STRUCTURE_ENDO_STEEL)) {
                     if (null != u) {
-                        ((MissingMekLocation)prt).setClan(TechConstants.isClan(u.getEntity().getStructureTechLevel()));
+                        ((MissingMekLocation) prt).setClan(TechConstants.isClan(u.getEntity().getStructureTechLevel()));
                     }
                 }
             }
-
         }
         for (Part prt : removeParts) {
             retVal.removePart(prt);
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] Parts processed in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
+        MekHQ.getLogger().info(String.format("[Campaign Load] Parts processed in %dms",
+            System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
         for (Person psn : retVal.getPersonnel()) {
@@ -534,36 +493,23 @@ public class CampaignXmlParser {
             psn.resetSkillTypes();
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] Rank references fixed in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
+        MekHQ.getLogger().info(String.format("[Campaign Load] Rank references fixed in %dms",
+            System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
         // Okay, Units, need their pilot references fixed.
-        for (Unit unit : retVal.getUnits()) {
+        retVal.getHangar().forEachUnit(unit -> {
             // Also, the unit should have its campaign set.
             unit.setCampaign(retVal);
+            unit.fixReferences(retVal);
 
             // reset the pilot and entity, to reflect newly assigned personnel
             unit.resetPilotAndEntity();
 
             if (null != unit.getRefit()) {
+                unit.getRefit().fixReferences(retVal);
+
                 unit.getRefit().reCalc();
-                if (null == unit.getRefit().getNewArmorSupplies()
-                        && unit.getRefit().getNewArmorSuppliesId() > 0) {
-                    Part armorPart = retVal.getPart(unit.getRefit().getNewArmorSuppliesId());
-                    if (armorPart instanceof Armor) {
-                        Armor armorSupplies = (Armor) armorPart;
-                        unit.getRefit().setNewArmorSupplies(armorSupplies);
-                        if (null == armorSupplies.getUnit()) {
-                            armorSupplies.setUnit(unit);
-                        }
-                    } else {
-                        MekHQ.getLogger().error(CampaignXmlParser.class, METHOD_NAME,
-                            String.format("[Campain Load] Refit for unit %s (%s) references armor supplies that are incorrect; ignoring.",
-                                unit.getName(), unit.getId().toString()));
-                    }
-                }
                 if (!unit.getRefit().isCustomJob()
                         && !unit.getRefit().kitFound()) {
                     retVal.getShoppingList().addShoppingItemWithoutChecking(unit
@@ -611,32 +557,30 @@ public class CampaignXmlParser {
                     }
                 }
             }
-        }
+        });
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] Pilot references fixed in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
+        MekHQ.getLogger().info(String.format("[Campaign Load] Pilot references fixed in %dms",
+            System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
-        for (Unit unit : retVal.getUnits()) {
+        retVal.getHangar().forEachUnit(unit -> {
             // Some units have been incorrectly assigned a null C3UUID as a string. This should correct that by setting a new C3UUID
             if ((unit.getEntity().hasC3() || unit.getEntity().hasC3i() || unit.getEntity().hasNavalC3())
                     && (unit.getEntity().getC3UUIDAsString() == null || unit.getEntity().getC3UUIDAsString().equals("null"))) {
                 unit.getEntity().setC3UUID();
                 unit.getEntity().setC3NetIdSelf();
             }
-        }
+        });
         retVal.refreshNetworks();
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] C3 networks refreshed in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
+        MekHQ.getLogger().info(String.format("[Campaign Load] C3 networks refreshed in %dms",
+            System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
         // ok, once we are sure that campaign has been set for all units, we can
         // now go through and initializeParts and run diagnostics
         List<Unit> removeUnits = new ArrayList<>();
-        for (Unit unit : retVal.getUnits()) {
+        retVal.getHangar().forEachUnit(unit -> {
             // just in case parts are missing (i.e. because they weren't tracked
             // in previous versions)
             unit.initializeParts(true);
@@ -650,21 +594,27 @@ public class CampaignXmlParser {
                     unit.setSalvage(true);
                 }
             }
-        }
+        });
         for (Unit unit : removeUnits) {
             retVal.removeUnit(unit.getId());
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] Units initialized in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
+        MekHQ.getLogger().info(String.format("[Campaign Load] Units initialized in %dms",
+                System.currentTimeMillis() - timestamp));
+        timestamp = System.currentTimeMillis();
+
+        for (Person person : retVal.getPersonnel()) {
+            person.fixReferences(retVal);
+        }
+
+        MekHQ.getLogger().info(String.format("[Campaign Load] Personnel initialized in %dms",
+                System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
         retVal.reloadNews();
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] News loaded in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
+        MekHQ.getLogger().info(String.format("[Campaign Load] News loaded in %dms",
+                System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
         // If we don't have a personnel market, create one.
@@ -691,19 +641,18 @@ public class CampaignXmlParser {
         fixupUnitTechProblems(retVal);
 
         //unload any ammo bins in the warehouse
-        ArrayList<AmmoBin> binsToUnload = new ArrayList<AmmoBin>();
-        for (Part prt : retVal.getSpareParts()) {
+        List<AmmoBin> binsToUnload = new ArrayList<>();
+        retVal.getWarehouse().forEachSparePart(prt -> {
             if (prt instanceof AmmoBin && !prt.isReservedForRefit() && ((AmmoBin) prt).getShotsNeeded() == 0) {
                 binsToUnload.add((AmmoBin) prt);
             }
-        }
+        });
         for (AmmoBin bin : binsToUnload) {
             bin.unload();
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] Ammo bins cleared in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
+        MekHQ.getLogger().info(String.format("[Campaign Load] Ammo bins cleared in %dms",
+                System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
 
@@ -711,16 +660,15 @@ public class CampaignXmlParser {
         //is not refitting or is gone then unreserve
         for (Part part : retVal.getParts()) {
             if (part.isReservedForRefit()) {
-                Unit u = retVal.getUnit(part.getRefitId());
-                if (null == u || !u.isRefitting()) {
-                    part.setRefitId(null);
+                Unit u = part.getRefitUnit();
+                if ((null == u) || !u.isRefitting()) {
+                    part.setRefitUnit(null);
                 }
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] Reserved refit parts fixed in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
+        MekHQ.getLogger().info(String.format("[Campaign Load] Reserved refit parts fixed in %dms",
+                System.currentTimeMillis() - timestamp));
         timestamp = System.currentTimeMillis();
 
         //try to stack as much as possible the parts in the warehouse that may be unstacked
@@ -761,15 +709,12 @@ public class CampaignXmlParser {
             retVal.removePart(toRemove);
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                String.format("[Campaign Load] Warehouse cleaned up in %dms", //$NON-NLS-1$
-                        System.currentTimeMillis() - timestamp));
-        timestamp = System.currentTimeMillis();
+        MekHQ.getLogger().info(String.format("[Campaign Load] Warehouse cleaned up in %dms",
+                System.currentTimeMillis() - timestamp));
 
         retVal.setUnitRating(null);
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load of campaign file complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info("Load of campaign file complete!");
 
         return retVal;
     }
@@ -779,33 +724,25 @@ public class CampaignXmlParser {
      * having been double-assigned or being assigned to mothballed units.
      */
     private void fixupUnitTechProblems(Campaign retVal) {
-        final String METHOD_NAME = "fixupUnitTechProblems(Campaign)";
-
         // Cleanup problems with techs and units
         for (Person tech : retVal.getTechs()) {
-            for (UUID id : new ArrayList<>(tech.getTechUnitIDs())) {
-                Unit u = retVal.getUnit(id);
-
+            for (Unit u : new ArrayList<>(tech.getTechUnits())) {
                 String reason = null;
-                String unitDesc = id.toString();
-                if (null == u) {
-                    reason = "referenced missing unit";
-                    tech.removeTechUnitId(id);
-                } else if (null == u.getTechId()) {
+                String unitDesc = u.getId().toString();
+                if (null == u.getTech()) {
                     reason = "was not referenced by unit";
                     u.setTech(tech);
                 } else if (u.isMothballed()) {
                     reason = "referenced mothballed unit";
                     unitDesc = u.getName();
-                    tech.removeTechUnitId(id);
-                } else if (!tech.getId().equals(u.getTechId())) {
+                    tech.removeTechUnit(u);
+                } else if (u.getTech() != null && !tech.getId().equals(u.getTech().getId())) {
                     reason = String.format("referenced tech %s's maintained unit", u.getTech().getFullName());
                     unitDesc = u.getName();
-                    tech.removeTechUnitId(id);
+                    tech.removeTechUnit(u);
                 }
                 if (null != reason) {
-                    MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.WARNING,
-                            String.format("Tech %s %s %s (fixed)", tech.getFullName(), reason, unitDesc));
+                    MekHQ.getLogger().warning(String.format("Tech %s %s %s (fixed)", tech.getFullName(), reason, unitDesc));
                 }
             }
         }
@@ -820,8 +757,7 @@ public class CampaignXmlParser {
      * @throws ParseException
      * @throws DOMException
      */
-    private static void processInfoNode(Campaign retVal, Node wni, Version version)
-            throws DOMException, CampaignXmlParseException {
+    private static void processInfoNode(Campaign retVal, Node wni, Version version) throws DOMException, CampaignXmlParseException {
         NodeList nl = wni.getChildNodes();
 
         String rankNames = null;
@@ -993,7 +929,7 @@ public class CampaignXmlParser {
         retVal.setCurrentReportHTML(Utilities.combineString(retVal.getCurrentReport(), Campaign.REPORT_LINEBREAK));
 
         // Everything's new
-        List<String> newReports = new ArrayList<String>(retVal.getCurrentReport().size() * 2);
+        List<String> newReports = new ArrayList<>(retVal.getCurrentReport().size() * 2);
         boolean firstReport = true;
         for (String report : retVal.getCurrentReport()) {
             if (firstReport) {
@@ -1021,10 +957,7 @@ public class CampaignXmlParser {
             if (!wn2.getNodeName().equalsIgnoreCase("lance")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, "processLanceNodes(Campaign,Node)", LogLevel.ERROR, //$NON-NLS-1$
-                        "Unknown node type not loaded in Lance nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
-
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Lance nodes: " + wn2.getNodeName());
                 continue;
             }
 
@@ -1036,35 +969,15 @@ public class CampaignXmlParser {
         }
     }
 
-    private static void fixIdReferences(Campaign retVal) {
-        // set up translation hashes
-        Map<Integer, UUID> uHash = new HashMap<>();
-        Map<Integer, UUID> pHash = new HashMap<>();
-        for (Unit u : retVal.getUnits()) {
-            uHash.put(u.getOldId(), u.getId());
-        }
-        for (Person p : retVal.getPersonnel()) {
-            pHash.put(p.getOldId(), p.getId());
-        }
-        // ok now go through and fix
-        for (Unit u : retVal.getUnits()) {
-            u.fixIdReferences(uHash, pHash);
-        }
-        for (Person p : retVal.getPersonnel()) {
-            p.fixIdReferences(uHash, pHash);
-        }
-        retVal.getForces().fixIdReferences(uHash);
-        for (Part p : retVal.getParts()) {
-            p.fixIdReferences(uHash, pHash);
-        }
-        List<Kill> ghostKills = new ArrayList<Kill>();
+    private static void cleanupGhostKills(Campaign retVal) {
+        // check for kills with missing person references
+        List<Kill> ghostKills = new ArrayList<>();
         for (Kill k : retVal.getKills()) {
-            k.fixIdReferences(pHash);
             if (null == k.getPilotId()) {
                 ghostKills.add(k);
             }
         }
-        // check for kills with missing person references
+
         for (Kill k : ghostKills) {
             if (null == k.getPilotId()) {
                 retVal.removeKill(k);
@@ -1072,31 +985,14 @@ public class CampaignXmlParser {
         }
     }
 
-    private static void fixIdReferencesB(Campaign retVal) {
-        for (Unit u : retVal.getUnits()) {
-            Entity en = u.getEntity();
-            en.setExternalIdAsString(u.getId().toString());
-
-            // If they have C3 or C3i we need to set their ID
-            if (en.hasC3() || en.hasC3i() || en.hasNavalC3()) {
-                en.setC3UUID();
-                en.setC3NetIdSelf();
-            }
-        }
-    }
-
     private static void processFinances(Campaign retVal, Node wn) {
-        MekHQ.getLogger().log(CampaignXmlParser.class, "processFinances(Campaign,Node)", LogLevel.INFO, //$NON-NLS-1$
-                "Loading Finances from XML..."); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Finances from XML...");
         retVal.setFinances(Finances.generateInstanceFromXML(wn));
-        MekHQ.getLogger().log(CampaignXmlParser.class, "processFinances(Campaign,Node)", LogLevel.INFO, //$NON-NLS-1$
-                "Load of Finances complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load of Finances complete!");
     }
 
     private static void processForces(Campaign retVal, Node wn, Version version) {
-        final String METHOD_NAME = "processForces(Campaign,Node,Version)"; //$NON-NLS-1$
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading Force Organization from XML..."); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Force Organization from XML...");
 
         NodeList wList = wn.getChildNodes();
 
@@ -1113,9 +1009,7 @@ public class CampaignXmlParser {
             if (!wn2.getNodeName().equalsIgnoreCase("force")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "Unknown node type not loaded in Forces nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Forces nodes: " + wn2.getNodeName());
 
                 continue;
             }
@@ -1127,20 +1021,15 @@ public class CampaignXmlParser {
                     foundForceAlready = true;
                 }
             } else {
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "More than one type-level force found"); //$NON-NLS-1$
+                MekHQ.getLogger().error(CampaignXmlParser.class, "More than one type-level force found");
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load of Force Organization complete!");
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load of Force Organization complete!");
     }
 
-    private static void processPersonnelNodes(Campaign retVal, Node wn,
-            Version version) {
-        final String METHOD_NAME = "processPersonnelNodes(Campaign,Node,Version)"; //$NON-NLS-1$
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading Personnel Nodes from XML..."); //$NON-NLS-1$
+    private static void processPersonnelNodes(Campaign retVal, Node wn, Version version) {
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Personnel Nodes from XML...");
 
         NodeList wList = wn.getChildNodes();
 
@@ -1156,9 +1045,7 @@ public class CampaignXmlParser {
             if (!wn2.getNodeName().equalsIgnoreCase("person")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "Unknown node type not loaded in Personnel nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Personnel nodes: " + wn2.getNodeName());
 
                 continue;
             }
@@ -1170,16 +1057,11 @@ public class CampaignXmlParser {
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load Personnel Nodes Complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load Personnel Nodes Complete!");
     }
 
-    private static void processSkillTypeNodes(Campaign retVal, Node wn,
-            Version version) {
-        final String METHOD_NAME = "processSkillTypeNodes(Campaign,Node,Version)"; //$NON-NLS-1$
-
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading Skill Type Nodes from XML..."); //$NON-NLS-1$
+    private static void processSkillTypeNodes(Campaign retVal, Node wn, Version version) {
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Skill Type Nodes from XML...");
 
         NodeList wList = wn.getChildNodes();
 
@@ -1197,10 +1079,7 @@ public class CampaignXmlParser {
             } else if (!wn2.getNodeName().equalsIgnoreCase("skillType")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "Unknown node type not loaded in Skill Type nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
-
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Skill Type nodes: " + wn2.getNodeName());
                 continue;
             }
 
@@ -1208,16 +1087,11 @@ public class CampaignXmlParser {
             SkillType.generateInstanceFromXML(wn2, version);
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load Skill Type Nodes Complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load Skill Type Nodes Complete!");
     }
 
-    private static void processSpecialAbilityNodes(Campaign retVal, Node wn,
-            Version version) {
-        final String METHOD_NAME = "processSpecialAbilityNodes(Campaign,Node,Version)"; //$NON-NLS-1$
-
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading Special Ability Nodes from XML..."); //$NON-NLS-1$
+    private static void processSpecialAbilityNodes(Campaign retVal, Node wn, Version version) {
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Special Ability Nodes from XML...");
 
         PilotOptions options = new PilotOptions();
 
@@ -1238,25 +1112,17 @@ public class CampaignXmlParser {
             if (!wn2.getNodeName().equalsIgnoreCase("ability")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "Unknown node type not loaded in Special Ability nodes: " //$NON-NLS-1$
-                        + wn2.getNodeName());
-
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Special Ability nodes: " + wn2.getNodeName());
                 continue;
             }
-
             SpecialAbility.generateInstanceFromXML(wn2, options, version);
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load Special Ability Nodes Complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load Special Ability Nodes Complete!");
     }
 
-    private static void processKillNodes(Campaign retVal, Node wn,
-            Version version) {
-        final String METHOD_NAME = "processKillNodes(Campaign,Node,Version"; //$NON-NLS-1$
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading Kill Nodes from XML..."); //$NON-NLS-1$
+    private static void processKillNodes(Campaign retVal, Node wn, Version version) {
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Kill Nodes from XML...");
 
         NodeList wList = wn.getChildNodes();
 
@@ -1270,10 +1136,7 @@ public class CampaignXmlParser {
             } else if (!wn2.getNodeName().equalsIgnoreCase("kill")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "Unknown node type not loaded in Kill nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
-
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Kill nodes: " + wn2.getNodeName());
                 continue;
             }
 
@@ -1283,14 +1146,11 @@ public class CampaignXmlParser {
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load Kill Nodes Complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load Kill Nodes Complete!");
     }
 
     private static void processGameOptionNodes(Campaign retVal, Node wn) {
-        final String METHOD_NAME = "processGameOptionNodes(Campaign,Node)"; //$NON-NLS-1$
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading GameOption Nodes from XML..."); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading GameOption Nodes from XML...");
 
         NodeList wList = wn.getChildNodes();
 
@@ -1304,16 +1164,14 @@ public class CampaignXmlParser {
             } else if (!wn2.getNodeName().equalsIgnoreCase("gameoption")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "Unknown node type not loaded in Game Option nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Game Option nodes: " + wn2.getNodeName());
 
                 continue;
             }
             NodeList nl = wn2.getChildNodes();
 
             String name = null;
-            Object value = null;
+            String value = null;
             for (int y = 0; y < nl.getLength(); y++) {
                 Node wn3 = nl.item(y);
                 if (wn3.getNodeName().equalsIgnoreCase("name")) {
@@ -1325,47 +1183,38 @@ public class CampaignXmlParser {
             if ((null != name) && (null != value)) {
                 IOption option = retVal.getGameOptions().getOption(name);
                 if (null != option) {
-                    if (!option.getValue().toString().equals(value.toString())) {
+                    if (!option.getValue().toString().equals(value)) {
                         try {
                             switch (option.getType()) {
                                 case IOption.STRING:
                                 case IOption.CHOICE:
-                                    option.setValue((String) value);
+                                    option.setValue(value);
                                     break;
-
                                 case IOption.BOOLEAN:
-                                    option.setValue(new Boolean(value.toString()));
+                                    option.setValue(Boolean.valueOf(value));
                                     break;
-
                                 case IOption.INTEGER:
-                                    option.setValue(new Integer(value.toString()));
+                                    option.setValue(Integer.valueOf(value));
                                     break;
-
                                 case IOption.FLOAT:
-                                    option.setValue(new Float(value.toString()));
+                                    option.setValue(Float.valueOf(value));
                                     break;
-
                             }
                         } catch (IllegalArgumentException iaEx) {
-                            MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                                    "Error trying to load option '" + name + "' with a value of '" //$NON-NLS-1$
-                                    + value + "'.");
+                            MekHQ.getLogger().error(CampaignXmlParser.class,
+                                    "Error trying to load option '" + name + "' with a value of '" + value + "'.");
                         }
                     }
                 } else {
-                    MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                            "Invalid option '" + name + "' when trying to load options file."); //$NON-NLS-1$
+                    MekHQ.getLogger().error(CampaignXmlParser.class, "Invalid option '" + name + "' when trying to load options file.");
                 }
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load Game Option Nodes Complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load Game Option Nodes Complete!");
     }
 
     private static void processCustom(Campaign retVal, Node wn) {
-        final String METHOD_NAME = "processCustom(Campaign,Node)"; //$NON-NLS-1$
-
         String sCustomsDir = "data" + File.separator + "mechfiles"
                 + File.separator + "customs";
         String sCustomsDirCampaign = sCustomsDir + File.separator + retVal.getName();
@@ -1402,61 +1251,49 @@ public class CampaignXmlParser {
             }
         }
         retVal.addCustom(name);
-        if (null != name && null != mtf) {
-            try {
-                // if this file already exists then don't overwrite it or we
-                // will end up with a bunch of copies
-                String fileName = sCustomsDir + File.separator + name + ".mtf";
-                String fileNameCampaign = sCustomsDirCampaign + File.separator
-                        + name + ".mtf";
-                if ((new File(fileName)).exists()
-                        || (new File(fileNameCampaign)).exists()) {
-                    return;
-                }
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                        "Loading Custom unit from XML..."); //$NON-NLS-1$
-                OutputStream out = new FileOutputStream(fileNameCampaign);
-                PrintStream p = new PrintStream(out);
+        if ((name != null) && (mtf != null)) {
+            // if this file already exists then don't overwrite it or we
+            // will end up with a bunch of copies
+            String fileName = sCustomsDir + File.separator + name + ".mtf";
+            String fileNameCampaign = sCustomsDirCampaign + File.separator
+                    + name + ".mtf";
+            if ((new File(fileName)).exists()
+                    || (new File(fileNameCampaign)).exists()) {
+                return;
+            }
+            MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Custom unit from XML...");
+            try (OutputStream out = new FileOutputStream(fileNameCampaign);
+                 PrintStream p = new PrintStream(out)) {
                 p.println(mtf);
-                p.close();
-                out.close();
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                        "Loaded Custom unit!"); //$NON-NLS-1$
+                MekHQ.getLogger().info(CampaignXmlParser.class, "Loaded Custom unit!");
             } catch (Exception ex) {
-                MekHQ.getLogger().error(CampaignXmlParser.class, METHOD_NAME, ex);
+                MekHQ.getLogger().error(CampaignXmlParser.class, ex);
             }
         }
-        if (null != name && null != blk) {
-            try {
-                // if this file already exists then don't overwrite it or we
-                // will end up with a bunch of copies
-                String fileName = sCustomsDir + File.separator + name + ".blk";
-                String fileNameCampaign = sCustomsDirCampaign + File.separator
-                        + name + ".blk";
-                if ((new File(fileName)).exists()
-                        || (new File(fileNameCampaign)).exists()) {
-                    return;
-                }
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                        "Loading Custom unit from XML..."); //$NON-NLS-1$
-                FileOutputStream out = new FileOutputStream(fileNameCampaign);
-                PrintStream p = new PrintStream(out);
+        if ((name != null) && (blk != null)) {
+            // if this file already exists then don't overwrite it or we
+            // will end up with a bunch of copies
+            String fileName = sCustomsDir + File.separator + name + ".blk";
+            String fileNameCampaign = sCustomsDirCampaign + File.separator
+                    + name + ".blk";
+            if ((new File(fileName)).exists()
+                    || (new File(fileNameCampaign)).exists()) {
+                return;
+            }
+            MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Custom unit from XML...");
+
+            try (FileOutputStream out = new FileOutputStream(fileNameCampaign);
+                 PrintStream p = new PrintStream(out)) {
                 p.println(blk);
-                p.close();
-                out.close();
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                        "Loaded Custom unit!"); //$NON-NLS-1$
+                MekHQ.getLogger().info(CampaignXmlParser.class, "Loaded Custom unit!");
             } catch (Exception ex) {
-                MekHQ.getLogger().error(CampaignXmlParser.class, METHOD_NAME, ex);
+                MekHQ.getLogger().error(CampaignXmlParser.class, ex);
             }
         }
     }
 
     private static void processMissionNodes(Campaign retVal, Node wn, Version version) {
-        final String METHOD_NAME = "processMissionNodes(Campaign,Node,Version)"; //$NON-NLS-1$
-
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading Mission Nodes from XML..."); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Mission Nodes from XML...");
 
         NodeList wList = wn.getChildNodes();
 
@@ -1472,10 +1309,7 @@ public class CampaignXmlParser {
             if (!wn2.getNodeName().equalsIgnoreCase("mission")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                        "Unknown node type not loaded in Mission nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
-
+                MekHQ.getLogger().info(CampaignXmlParser.class, "Unknown node type not loaded in Mission nodes: " + wn2.getNodeName());
                 continue;
             }
 
@@ -1486,17 +1320,13 @@ public class CampaignXmlParser {
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load Mission Nodes Complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load Mission Nodes Complete!");
     }
 
     private static String checkUnits(Node wn) {
-        final String METHOD_NAME = "checkUnits(Node)"; //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Checking for missing entities...");
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO, //$NON-NLS-1$
-                "Checking for missing entities..."); //$NON-NLS-1$
-
-        ArrayList<String> unitList = new ArrayList<String>();
+        List<String> unitList = new ArrayList<>();
         NodeList wList = wn.getChildNodes();
 
         // Okay, lets iterate through the children, eh?
@@ -1519,41 +1349,34 @@ public class CampaignXmlParser {
                 if (wn3.getNodeName().equalsIgnoreCase("entity")) {
                     try {
                         if (null == MekHqXmlUtil.getEntityFromXmlString(wn3)) {
-                            String name = MekHqXmlUtil
-                                    .getEntityNameFromXmlString(wn3);
+                            String name = MekHqXmlUtil.getEntityNameFromXmlString(wn3);
                             if (!unitList.contains(name)) {
                                 unitList.add(name);
                             }
                         }
                     } catch (Exception e) {
-                        MekHQ.getLogger().error(CampaignXmlParser.class, METHOD_NAME,
-                            "Could not read entity from XML", e); //$NON-NLS-1$
+                        MekHQ.getLogger().error(CampaignXmlParser.class, "Could not read entity from XML");
+                        MekHQ.getLogger().error(CampaignXmlParser.class, e);
                     }
                 }
             }
         }
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Finished checking for missing entities!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Finished checking for missing entities!");
 
         if (unitList.isEmpty()) {
             return null;
         } else {
-            String unitListString = "";
+            StringBuilder unitListString = new StringBuilder();
             for (String s : unitList) {
-                unitListString += "\n" + s;
+                unitListString.append("\n").append(s);
             }
-            MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                String.format("Could not load the following units: %s", unitListString)); //$NON-NLS-1$
-            return unitListString;
+            MekHQ.getLogger().error(CampaignXmlParser.class, String.format("Could not load the following units: %s", unitListString.toString()));
+            return unitListString.toString();
         }
     }
 
-    private static void processUnitNodes(Campaign retVal, Node wn,
-            Version version) {
-        final String METHOD_NAME = "processUnitNodes(Campaign,Node,Version)"; //$NON-NLS-1$
-
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading Unit Nodes from XML..."); //$NON-NLS-1$
+    private static void processUnitNodes(Campaign retVal, Node wn, Version version) {
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Unit Nodes from XML...");
 
         NodeList wList = wn.getChildNodes();
 
@@ -1569,9 +1392,7 @@ public class CampaignXmlParser {
             if (!wn2.getNodeName().equalsIgnoreCase("unit")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "Unknown node type not loaded in Unit nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Unit nodes: " + wn2.getNodeName());
 
                 continue;
             }
@@ -1583,20 +1404,16 @@ public class CampaignXmlParser {
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load Unit Nodes Complete!"); //$NON-NLS-1$
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Load Unit Nodes Complete!");
     }
 
-    private static void processPartNodes(Campaign retVal, Node wn,
-            Version version) {
-        final String METHOD_NAME = "processPartNodes(Campaign,Node,Version)"; //$NON-NLS-1$
-
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Loading Part Nodes from XML..."); //$NON-NLS-1$
+    private static void processPartNodes(Campaign retVal, Node wn, Version version) {
+        MekHQ.getLogger().info(CampaignXmlParser.class, "Loading Part Nodes from XML...");
 
         NodeList wList = wn.getChildNodes();
 
         // Okay, lets iterate through the children, eh?
+        List<Part> parts = new ArrayList<>();
         for (int x = 0; x < wList.getLength(); x++) {
             Node wn2 = wList.item(x);
 
@@ -1608,9 +1425,7 @@ public class CampaignXmlParser {
             if (!wn2.getNodeName().equalsIgnoreCase("part")) {
                 // Error condition of sorts!
                 // Errr, what should we do here?
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.ERROR,
-                        "Unknown node type not loaded in Part nodes: " //$NON-NLS-1$
-                                + wn2.getNodeName());
+                MekHQ.getLogger().error(CampaignXmlParser.class, "Unknown node type not loaded in Part nodes: " + wn2.getNodeName());
 
                 continue;
             }
@@ -1624,8 +1439,7 @@ public class CampaignXmlParser {
 
             if (((p instanceof EquipmentPart) && ((EquipmentPart) p).getType() == null)
                     || ((p instanceof MissingEquipmentPart) && ((MissingEquipmentPart) p).getType() == null)) {
-                MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.WARNING,
-                        "Could not find matching EquipmentType for part " + p.getName());
+                MekHQ.getLogger().warning(CampaignXmlParser.class, "Could not find matching EquipmentType for part " + p.getName());
                 continue;
             }
 
@@ -1639,7 +1453,7 @@ public class CampaignXmlParser {
             if (isLegacyMissingMASC(p)) {
                 p = new MissingMASC(p.getUnitTonnage(),
                         ((MissingEquipmentPart) p).getType(), ((MissingEquipmentPart) p).getEquipmentNum(), retVal,
-                        ((MissingEquipmentPart) p).getTonnage(), 0, p.isOmniPodded());
+                        p.getTonnage(), 0, p.isOmniPodded());
                 p.setId(pid);
             }
             // deal with true values for sensor and life support on non-Mech
@@ -1662,12 +1476,12 @@ public class CampaignXmlParser {
                 p = null;
             }
 
-            if ((null != p) && (p.getUnitId() != null)
+            if ((null != p) && (p.getUnit() != null)
                     && ((version.getMinorVersion() < 43)
                             || ((version.getMinorVersion() == 43) && (version.getSnapshot() < 5)))
                     && ((p instanceof AmmoBin) || (p instanceof MissingAmmoBin))) {
-                Unit u = retVal.getUnit(p.getUnitId());
-                if ((null != u) && (u.getEntity().usesWeaponBays())) {
+                Unit u = p.getUnit();
+                if (u.getEntity().usesWeaponBays()) {
                     Mounted ammo;
                     if (p instanceof EquipmentPart) {
                         ammo = u.getEntity().getEquipment(((EquipmentPart) p).getEquipmentNum());
@@ -1694,12 +1508,13 @@ public class CampaignXmlParser {
             }
 
             if (p != null) {
-                retVal.importPart(p);
+                parts.add(p);
             }
         }
 
-        MekHQ.getLogger().log(CampaignXmlParser.class, METHOD_NAME, LogLevel.INFO,
-                "Load Part Nodes Complete!"); //$NON-NLS-1$
+        retVal.importParts(parts);
+
+        MekHQ.getLogger().info("Load Part Nodes Complete!");
     }
 
     /**
@@ -1729,11 +1544,10 @@ public class CampaignXmlParser {
     }
 
     private static void updatePlanetaryEventsFromXML(Node wn) {
-
         Systems.reload(true);
 
         List<Planet.PlanetaryEvent> events;
-        Map<Integer, List<Planet.PlanetaryEvent>> eventsMap = new HashMap<>();;
+        Map<Integer, List<Planet.PlanetaryEvent>> eventsMap = new HashMap<>();
 
         NodeList wList = wn.getChildNodes();
         for (int x = 0; x < wList.getLength(); x++) {
